Fix tech icons in Dark Mode

--- a/src/App.css
+++ b/src/App.css
@@ -308,6 +308,7 @@ button:hover {
 }
 
 .dark-mode a,
+.dark-mode .tech-icon,
 .dark-mode .icon {
 	color: whitesmoke;
 }
